4-k8s-examples/6-kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-config
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
        - name: html-secret
          mountPath: /usr/share/nginx/html/secret.html
          subPath: secret.html
      volumes:
      - name: html-config
        configMap:
          name: nginx-html
      - name: html-secret
        secret:
          secretName: nginx-secret
